appId: com.techshop.android
---
- launchApp:
    clearState: true
- runFlow: ../subflows/login.yaml
- tapOn:
    id: "add-p1"
- tapOn:
    id: "tab-cart"
- extendedWaitUntil:
    visible:
      id: "proceed-checkout"
    timeout: 10000
- tapOn:
    id: "proceed-checkout"
- extendedWaitUntil:
    visible:
      id: "checkout-firstName"
    timeout: 10000
- assertVisible:
    id: "checkout-firstName"
